Added assets and infor for unhynged and tissuetags. deleted trial html pages

--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
           <div class="card my-3 shadow">
             <div class="card-body">
               <div class="row justify-content-center">
-                <div class="justify-content-center align-items-center col-md-10 col-lg-4 p-2" style=""><img class="d-block w-100 img-fluid" src="../../../../Pictures/Saved Pictures/icebear.gif"></div>
+                <div class="justify-content-center align-items-center col-md-10 col-lg-4 p-2" style=""><img class="d-block w-100 img-fluid" src="assets/unhynged.JPG"></div>
                 <div class="col-md-10 col-lg-8" style="">
                   <h5 class="card-title"><b>UnHynged</b></h5>
-                  <p class="card-text">...</p>
+                  <p class="card-text"><a href="https://docs.google.com/presentation/d/1gpSnQFlAUhiKimBjEQ3RP-TITVYzGKwjiSsWKQeuJ4A/edit?usp=sharing" target="_blank" class="text-decoration-none">UnHynged</a>&nbsp;is a uniquely collapseable tacklebox made for painters. I was able to broaden my understanding of the design thinking process by wading into a space I had 0 knowledge in (painting) and totally depend on empathizing with users to find what they need. The solution ideation process also stimulated me beyond my typical thought process, adamantly learning from my talented mechanical engineering partner as we designed, developed, tested, and presented a <i>physical</i>&nbsp;and original product.</p>
                 </div>
               </div>
             </div>
@@ -158,10 +158,10 @@
           <div class="card my-3 shadow">
             <div class="card-body" style="">
               <div class="row justify-content-center">
-                <div class="col-lg-4 col-md-10 p-2" style=""><img class="img-fluid d-block" src="../../../../Pictures/Saved Pictures/382db65ae64a3040f933ed6452df21a0.jpg"></div>
+                <div class="col-lg-4 col-md-10 p-2" style=""><img class="img-fluid d-block" src="assets/tt.jpg"></div>
                 <div class="col-md-10 col-lg-8" style="">
-                  <h5 class="card-title"><b>Tissue Tag</b></h5>
-                  <p class="card-text">...</p>
+                  <h5 class="card-title"><b>Tissue Tags</b></h5>
+                  <p class="card-text">Tissue Tags are visually novel tissue holders, whether it's a puppy holding one in its mouth or a volcano ejecting a tissue. I developed this concept for the 2017 <a href="https://nvric.org/inneventure-fund/" target="_blank" class="text-decoration-none">Inneventure Fund Business Competition</a>, becoming 1 of 4 winners and the only non-graduate to win a portion of the fund at 17yo. Seeking out mentorship, I learned to create a business plan, pitches, and projections using databases like Mintel and EDGAR. WIth my partner, we iterated on prototypes using Blender, 3D printing and a lot of messing up.</p>
                 </div>
               </div>
             </div>
