Updated next update time and added rough devlog file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <p class="">Expected update: 9pm EST, 5 Oct, 2021 (Up Next: Proper Pictures and Summaries, Dedicated Project Pages)</p>
+          <p class="">Expected update: 9pm EST, 9 Oct, 2021 (Up Next: Dedicated Project Pages and links)</p>
         </div>
       </div>
     </div>
