added rough about me card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light bg-light py-0">
+  <nav class="navbar navbar-light bg-light pb-0">
     <div class="container"> <a class="navbar-brand text-primary" href="#">
         <b> Ryan Lin's Projects</b>
       </a> </div>
@@ -21,7 +21,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h1>Welcome to my projects page!&nbsp;<br></h1>
+          <h1>Welcome!&nbsp;<br></h1>
         </div>
       </div>
       <div class="row">
@@ -31,7 +31,21 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <p class="">Expected update: 9pm EST, 9 Oct, 2021 (Up Next: Dedicated Project Pages and links)</p>
+          <p class="">Expected update: 9pm EST, 9 Oct, 2021 (Up Next: Better About Section, Dedicated Project Pages and links)</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="py-3">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10">
+          <div class="card text-white bg-secondary mb-3 shadow-sm">
+            <div class="card-header text-body" style=""><b>Some Basic Info</b><br><b><b>(</b></b>In case you somehow found this page without my resume 🕵️‍♀️<b>)</b></div>
+            <div class="card-body">
+              <p class="text-body">Ryan Lin<br>B.S Computer Science and Engineering, Minor: Math<br>University of Nevada, Reno<br>ryanlin800@gmail.com<br><a href="https://drive.google.com/file/d/10xdWJJkiyXO3wzn9cDmD7qwAgGa3Znwu/view?usp=sharing" target="_blank" class="text-decoration-none">Resume</a><br><br><b>Interests:</b> Product Management, SWE, NLP, Computer Vision, Data Science&nbsp;</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -175,9 +189,9 @@
       </div>
     </div>
   </div>
-  <div class="py-5">
+  <div class="py-5 bg-light">
     <div class="container">
-      <div class="row">
+      <div class="row py-5 justify-content-center">
         <div class="col-md-9">
           <p class="lead">ryanlin800@gmail.com</p>
         </div>
@@ -190,9 +204,6 @@
         <div class="col-4 col-md-1 align-self-center"> <a href="https://open.spotify.com/playlist/48VWDwjQSOFBeOtJkJb7Ky?si=07a434fd220442cc" target="_blank" class="text-decoration-none">
             <i class="fa fa-fw text-muted fa-2x fa-spotify"></i>
           </a> </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12 mt-3 text-center"></div>
       </div>
     </div>
   </div>
