tweaked wording in mcav summary

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div class="col-lg-4 col-md-10 p-2" style=""><img class="img-fluid d-block" src="assets/mcav.png"></div>
                 <div class="col-md-10 col-lg-8" style="">
                   <h5 class="card-title"><b>MCAV @ UNR</b></h5>
-                  <p class="card-text" style="">As robotics expands into more and more facets of our world, it is the optimal time to create tools that aid the research, development, and education around this bourgeoning field. Multisensor Calibration And Visualizer is a React + Electron app I designed and developed with a team of 4 based on a found need for simpler calibration of sensors on an autonomous robot, such as a self-driving car. We continue to work closely with <a href="https://www.unr.edu/ncar/programs/intelligent-mobility" target="_blank" class="text-decoration-none">faculty</a> at the University of Nevada - Reno in testing and improving the product.</p>
+                  <p class="card-text" style="">As robotics expands into more and more facets of our world, it is the optimal time to create tools that aid the research, development, and education around this bourgeoning field. Multisensor Calibration And Visualizer is a React + Electron app I designed and developed with a team of 4 based on a need found for simpler calibration of sensors on autonomous robots such as self-driving cars. We continue to work closely with <a href="https://www.unr.edu/ncar/programs/intelligent-mobility" target="_blank" class="text-decoration-none">faculty</a> at the University of Nevada - Reno in testing and improving the product.</p>
                 </div>
               </div>
             </div>
