removed expected update time

--- a/index.html
+++ b/index.html
@@ -25,13 +25,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12">
-          <p class="lead">Currently under construction, but feel free to look around, and email me with anything you would like to talk about!</p>
-        </div>
-      </div>
-      <div class="row">
         <div class="col-md-12" style="">
-          <p class="">Expected update: 9pm EST, 9 Oct, 2021 (Up Next: Better About Section, Dedicated Project Pages and links)</p>
+          <p class="text-center">Currently under construction, but feel free to look around, and email me about anything you would like to talk about!<br></p>
         </div>
       </div>
     </div>
@@ -41,7 +36,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-8 col-md-10">
           <div class="card text-white bg-secondary mb-3 shadow-sm">
-            <div class="card-header text-body" style=""><b>Some Basic Info</b><br><b><b>(</b></b>In case you somehow found this page without my resume 🕵️‍♀️<b>)</b></div>
+            <div class="card-header text-body" style=""><b>Some Basic Info</b><br><b><b>(</b></b>In case you somehow found this page without my resume 🕵️‍♀️<b>🕵️‍♂️)</b></div>
             <div class="card-body">
               <p class="text-body">Ryan Lin<br>B.S Computer Science and Engineering, Minor: Math<br>University of Nevada, Reno<br>ryanlin800@gmail.com<br><a href="https://drive.google.com/file/d/10xdWJJkiyXO3wzn9cDmD7qwAgGa3Znwu/view?usp=sharing" target="_blank" class="text-decoration-none">Resume</a><br><br><b>Interests:</b> Product Management, SWE, NLP, Computer Vision, Data Science&nbsp;</p>
             </div>
