Changed construction message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="row">
         <div class="col-md-12" style="">
-          <p class="text-center">Currently under construction, but feel free to look around, and email me about anything you would like to talk about!<br></p>
+          <p class="text-center">We're undergoing some changes, but feel free to look around, and email me about anything you would like to talk about!<br></p>
         </div>
       </div>
     </div>
