--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" type="text/css">
   <!-- TODO: include bootstrap files locally instead of grabbing from online -->
-  <link rel="stylesheet" href="ryanlin.css">
+  <link rel="stylesheet" href="./css/ryanlin.css">
   <title>Ryan Lin, Welcome!</title>
   <meta name="description" content="Ryan Lin's Projects.">
   <meta name="keywords" content="ryan, lin, projects, product, manager, computer, vision, software, engineer, machine, learning, graduate">
