--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
         <div class="col-md-3 text-center d-flex flex-column justify-content-center mx-auto" style=""><i class="fa fa-5x fa-address-card v text-primary mx-auto my-5 p-3 border border-primary rounded shadow" style=""></i></div>
         <div class="col-md-8 my-auto" style="">
           <h2 class="">About Me</h2>
-          <p class="">Hi, I'm Ryan! I'll have a photo on here soon, but until then you'll just have to believe me when I say I'm a 6'6" and exceedingly handsome guy. I've explored many frontiers of technology ranging from machine learning to information technologies, and have grown myself to be an attentive software engineer that can confidently find footing in any domain I come across. I aim to create system, tools or experiences that is gratifying for end users and developers. If you know of any opportunities or want to talk about anything on this page, feel free to reach out!</p>
+          <p class="">Hi, I'm Ryan! I'll have a photo on here soon, but until then you'll just have to believe me when I say I'm 6'6" and exceedingly handsome. I've explored many frontiers of technology ranging from machine learning to information technologies, and have grown to be an attentive software engineer that can confidently find footing in any domain I come across. I aim to create systems, tools and experiences that are gratifying for end users and developers. If you know of any opportunities or want to talk about anything on this page, feel free to reach out!<br></p>
+          <p class="mb-0"><b>Recent Technologies:</b></p>
+          <ul class="list-inline">
+            <li class="list-inline-item">React</li>
+            <li class="list-inline-item">ExpressJS</li>
+            <li class="list-inline-item">GraphQL</li>
+            <li class="list-inline-item">Webhooks</li>
+            <li class="list-inline-item">Pandas</li>
+            <li class="list-inline-item">TensorFlow&nbsp;</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -226,6 +235,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
