--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="colorful.css">
 </head>
+  <title>Meet Ryan Lin</title>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
