added work exp logos

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
   <link rel="stylesheet" href="colorful.css">
-</head>
   <title>Meet Ryan Lin</title>
+</head>
 
 <body>
   <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
@@ -26,12 +26,12 @@
       </div>
     </div>
   </nav>
-  <div class="py-5 cover d-flex flex-column shadow">
+  <div class="py-5 cover d-flex flex-column shadow" style="">
     <div class="container my-auto">
       <div class="row">
         <div class="col-md-12">
           <h1 class="display-3">Welcome!</h1>
-          <p class="lead">You've found the page of Ryan Lin, a Software Engineer versed in machine learning and ux research. Currently open to new opportunities.</p><a class="btn btn-outline-primary p-2" href="#contact">Get in Touch</a>
+          <p class="lead">You've found the page of Ryan Lin, a Software Engineer versed in Machine Learning and UX Research. Currently open to new opportunities.</p><a class="btn btn-outline-primary p-2" href="#contact">Get in Touch</a>
         </div>
       </div>
     </div>
@@ -49,7 +49,7 @@
         <div class="col-md-3 text-center d-flex flex-column justify-content-center mx-auto" style=""><i class="fa fa-5x fa-address-card v text-primary mx-auto my-5 p-3 border border-primary rounded shadow" style=""></i></div>
         <div class="col-md-8 my-auto" style="">
           <h2 class="">About Me</h2>
-          <p class="">Hi, I'm Ryan! I'll have a photo on here soon, but until then you'll just have to believe me when I say I'm 6'6" and exceedingly handsome. I've explored many frontiers of technology ranging from machine learning to information technologies, and have grown to be an attentive software engineer that can confidently find footing in any domain I come across. I aim to create systems, tools and experiences that are gratifying for end users and developers. If you know of any opportunities or want to talk about anything on this page, feel free to reach out!<br></p>
+          <p class="">Hi, I'm Ryan! I've explored many frontiers of technology ranging from Machine Learning to Game Design to Support Engineering. This range prepared me to be attentive and confident in finding footing in any situation. My aim is to create systems, tools and experiences that are gratifying for end users and developers. If you know of any opportunities or want to talk about anything on this page, feel free to reach out!<br></p>
           <p class="mb-0"><b>Recent Technologies:</b></p>
           <ul class="list-inline">
             <li class="list-inline-item">React</li>
@@ -66,17 +66,17 @@
   <div class="py-5" style="" id="experience">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 my-auto col-sm-4">
-          <h2 class="mx-auto text-left">Places I've Worked</h2>
+        <div class="col-md-4 col-sm-4">
+          <h2 class="mx-auto text-left pt-5">Places I've Worked</h2>
         </div>
         <div class="col-md-8 py-2">
           <div class="card text-center border shadow" style="	transform:  rotate(0) ;">
             <div class="card-header bg-primary">
               <ul class="nav nav-tabs card-header-tabs">
                 <li class="nav-item" style="">
-                  <a class="nav-link active" data-toggle="tab" data-target="#tabone">Roblox</a>
+                  <a class="nav-link active" href="" data-toggle="tab" data-target="#tabone">Roblox</a>
                 </li>
-                <li style="" class="nav-item">
+                <li class="nav-item" style="">
                   <a class="nav-link" href="" data-toggle="tab" data-target="#tabtwo">Autonomous</a>
                 </li>
                 <li class="nav-item">
@@ -87,8 +87,9 @@
             <div class="card-body">
               <div class="tab-content mt-2">
                 <div class="tab-pane fade show active" id="tabone" role="tabpanel">
-                  <h6 class="my-0">Accelerator Program Intern</h6>
-                  <p class="mb-0">May 2020 - August 2020</p>
+                  <img class="d-block mx-auto mb-2 img-fluid" src="assets/logo-roblox.svg" width="200">
+                  <h5 class="my-0">Accelerator Program Intern</h5>
+                  <p class="mb-0 text-muted">May 2020 - Aug 2020</p>
                   <ul class="text-left mx-auto">
                     <li>Designed, developed, and launched a virtual experience to 100 early access playtesters.<br></li>
                     <li>Developed a Lua module for developing Game AI development, reducing iteration costs by 50%.</li>
@@ -96,8 +97,9 @@
                   </ul>
                 </div>
                 <div class="tab-pane fade" id="tabtwo" role="tabpanel">
-                  <h6 class="my-0" contenteditable="true">Undergraduate ML Researcher</h6>
-                  <p class="mb-0">May 2019 - September 2019</p>
+                  <img class="img-fluid d-block mx-auto mb-2" src="assets/logo-arl.png" width="200">
+                  <h5 class="my-0" contenteditable="true" style="">Undergraduate ML Researcher</h5>
+                  <p class="mb-0 text-muted">May 2019 - Sep 2019</p>
                   <ul class="text-left mx-auto">
                     <li>Composed and presented proposal on a lightweight method for object detection in degraded underground environments.</li>
                     <li>Developed a 20fps detection system by processing a custom dataset of 1000+ images and training a multi-class SVM.</li>
@@ -105,8 +107,9 @@
                   </ul>
                 </div>
                 <div class="tab-pane fade" id="tabthree" role="tabpanel">
-                  <h6 class="my-0">Global IT Intern</h6>
-                  <p class="mb-0">February 2018 - November 2018</p>
+                  <img class="img-fluid d-block mx-auto mb-2" src="assets/logo-igt.png" width="200">
+                  <h5 class="my-0">Global IT Intern</h5>
+                  <p class="mb-0 text-muted">Feb 2018 - Nov 2018</p>
                   <ul class="text-left mx-auto">
                     <li>Supported 100+ employees remotely to resolve technical roadblocks on various systems and from various countries.</li>
                     <li>Facilitated user success in a domain migration across 8+ countries with custom consultations and instructions.</li>
@@ -174,7 +177,7 @@
       <div class="row py-4" style="">
         <div class="my-auto col-md-8 py-1 order-md-12" style="">
           <h4 class="text-left">Multi-Sensor Calibration App</h4>
-          <p class="" style="">Robotics researchers face the unforgiving task of perfectly calibrating the multitude of sensors mounted on autonomous cars. The Multi-Sensor Calibration App is an app that takes sensor data and calculates calibration matrices automatically. The result is safer calibrations, faster research, and a more accessible future for robotics.</p>
+          <p class="" style="">Robotics researchers face the unforgiving task of perfectly calibrating the multitude of sensors mounted on autonomous cars. The Multi-Sensor Calibration App is takes sensor data and calculates calibration matrices automatically. The result is safer calibrations, faster research, and a more accessible future for robotics.</p>
           <ul class="list-inline mb-0 text-muted">
             <li class="list-inline-item">React</li>
             <li class="list-inline-item" contenteditable="true">Electron</li>
@@ -189,6 +192,11 @@
               <p class="">sensor graph with lidar overlay</p>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="row" style="">
+        <div class="col-md-12 d-flex flex-column align-items-center pt-4">
+          <p class="lead text-center"><i>Coming Soon...</i><br></p><a class="btn btn-dark" href="#">Project Archives</a>
         </div>
       </div>
     </div>
