added Startups in experience, added scrolling tabs

--- a/index.html
+++ b/index.html
@@ -72,31 +72,45 @@
         <div class="col-md-8 py-2">
           <div class="card text-center border shadow" style="	transform:  rotate(0) ;">
             <div class="card-header bg-primary">
-              <ul class="nav nav-tabs card-header-tabs">
+              <ul class="nav nav-tabs card-header-tabs side-scroll" style="">
                 <li class="nav-item" style="">
-                  <a class="nav-link active" href="" data-toggle="tab" data-target="#tabone">Roblox</a>
+                  <a class="nav-link active" href="" data-toggle="tab" data-target="#tabone">Startups</a>
                 </li>
                 <li class="nav-item" style="">
-                  <a class="nav-link" href="" data-toggle="tab" data-target="#tabtwo">Autonomous</a>
+                  <a class="nav-link" href="" data-toggle="tab" data-target="#tabtwo">Roblox</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="" data-toggle="tab" data-target="#tabthree">IGT</a>
+                  <a class="nav-link" href="" data-toggle="tab" data-target="#tabthree">Autonomous</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="" data-toggle="tab" data-target="#tabfour">IGT</a>
                 </li>
               </ul>
             </div>
             <div class="card-body">
               <div class="tab-content mt-2">
                 <div class="tab-pane fade show active" id="tabone" role="tabpanel">
+                  <i class="fa fa-5x fa-pagelines pb-2"></i>
+                  <h5 class="my-0">Startups and Contract Work</h5>
+                  <p class="mb-0 text-muted">Nov 2021 - Present</p>
+                  <ul class="text-left mx-auto">
+                    <li>Augmented and cleaned electromyograph dataset to improve accuracy of muscle fatigue predictions with deep neural network.</li>
+                    <li>Composed business and technical requirements for an event-driven game architecture using Behavior Driven Development.&nbsp;<br></li>
+                    <li>Scripted tests for an event-driven game architecture.</li>
+                    <li>Developed fullstack music analysis app with webhooks on server to await responses from GraphQL queries to Cyanite's sentiment API.</li>
+                  </ul>
+                </div>
+                <div class="tab-pane fade" id="tabtwo" role="tabpanel">
                   <img class="d-block mx-auto mb-2 img-fluid" src="assets/logo-roblox.svg" width="200">
                   <h5 class="my-0">Accelerator Program Intern</h5>
                   <p class="mb-0 text-muted">May 2020 - Aug 2020</p>
                   <ul class="text-left mx-auto">
-                    <li>Designed, developed, and launched a virtual experience to 100 early access playtesters.<br></li>
+                    <li contenteditable="true">Designed, developed, and launched a virtual experience to 100 early access playtesters.<br></li>
                     <li>Developed a Lua module for developing Game AI development, reducing iteration costs by 50%.</li>
                     <li>Engaged in playtest sessions and focus groups, producing insights from both players and developers.</li>
                   </ul>
                 </div>
-                <div class="tab-pane fade" id="tabtwo" role="tabpanel">
+                <div class="tab-pane fade" id="tabthree" role="tabpanel">
                   <img class="img-fluid d-block mx-auto mb-2" src="assets/logo-arl.png" width="200">
                   <h5 class="my-0" contenteditable="true" style="">Undergraduate ML Researcher</h5>
                   <p class="mb-0 text-muted">May 2019 - Sep 2019</p>
@@ -106,7 +120,7 @@
                     <li>Presented results to our team, who ultimately won 1st in the DARPA SubT Challenge against 25+ international institutions.</li>
                   </ul>
                 </div>
-                <div class="tab-pane fade" id="tabthree" role="tabpanel">
+                <div class="tab-pane fade" id="tabfour" role="tabpanel">
                   <img class="img-fluid d-block mx-auto mb-2" src="assets/logo-igt.png" width="200">
                   <h5 class="my-0">Global IT Intern</h5>
                   <p class="mb-0 text-muted">Feb 2018 - Nov 2018</p>
