working on smooth scroll, doesn't work yet

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbar4">
-        <ul class="navbar-nav ml-auto">
+        <ul class="smooth-scroll navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="#about">About</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#experience">Experience</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#projects">Projects</a> </li>
@@ -31,13 +31,13 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="display-3">Welcome!</h1>
-          <p class="lead">You've found the page of Ryan Lin, a Software Engineer versed in Machine Learning and UX Research. Currently open to new opportunities.</p><a class="btn btn-outline-primary p-2" href="#contact">Get in Touch</a>
+          <p class="lead">You've found the page of Ryan Lin, a Software Engineer versed in Machine Learning and UX Research. Currently open to new opportunities.</p><a class="btn btn-outline-primary p-2 smooth-scroll" href="#contact">Get in Touch</a>
         </div>
       </div>
     </div>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-md-12 d-flex flex-column align-items-center" style=""><a href="#about" class="text-dark">
+        <div class="col-md-12 d-flex flex-column align-items-center smooth-scroll" style=""><a href="#about" class="text-dark">
             <p class="lead mb-0 mx-auto text-body">Read On</p><i class="d-block fa fa-angle-down fa-fw mx-auto text-body fa-2x"></i>
           </a></div>
       </div>
