--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
   <div class="py-3 bg-primary">
     <div class="container">
       <div class="row">
-        <div class="d-flex col-md-10 text-center justify-content-start align-items-center">
-          <p class="mb-0 text-left">© 2022 Ryan Lin. All rights reserved</p>
+        <div class="d-flex col-md-10 align-items-center">
+          <p class="text-center text-md-left mb-0 w-100" contenteditable="true">© 2022 Ryan Lin. No rights reserved</p>
         </div>
         <div class="d-flex align-items-center justify-content-md-between justify-content-center my-2 col-md-2"> <a href="https://github.com/ryanlin">
             <i class="d-block fa fa-github fa-lg mx-2 text-light"></i>
