--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
         <div class="col-md-8 py-2">
           <div class="card text-center border shadow" style="	transform:  rotate(0) ;">
-            <div class="card-header bg-primary">
+            <div class="card-header bg-primary" style="	background-image: linear-gradient(to left, rgba(0, 0, 0, .2), rgba(0, 0, 0, 0));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
               <ul class="nav nav-tabs card-header-tabs side-scroll" style="">
                 <li class="nav-item" style="">
                   <a class="nav-link active" href="" data-toggle="tab" data-target="#tabone">Startups</a>
@@ -191,7 +191,7 @@
       <div class="row py-4" style="">
         <div class="my-auto col-md-8 py-1 order-md-12" style="">
           <h4 class="text-left">Multi-Sensor Calibration App</h4>
-          <p class="" style="">Robotics researchers face the unforgiving task of perfectly calibrating the multitude of sensors mounted on autonomous cars. The Multi-Sensor Calibration App is takes sensor data and calculates calibration matrices automatically. The result is safer calibrations, faster research, and a more accessible future for robotics.</p>
+          <p class="" style="">Robotics researchers face the unforgiving task of perfectly calibrating the multitude of sensors mounted on autonomous cars. The Multi-Sensor Calibration App takes sensor data and calculates calibration matrices automatically. The results are safer calibrations, faster research, and a more accessible future for robotics.</p>
           <ul class="list-inline mb-0 text-muted">
             <li class="list-inline-item">React</li>
             <li class="list-inline-item" contenteditable="true">Electron</li>
