--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <p class="mb-0 text-muted">May 2020 - Aug 2020</p>
                   <ul class="text-left mx-auto">
                     <li contenteditable="true">Designed, developed, and launched a virtual experience to 100 early access playtesters.<br></li>
-                    <li>Developed a Lua module for developing Game AI development, reducing iteration costs by 50%.</li>
+                    <li>Developed a Lua module for developing Game AI, reducing iteration costs by 50%.</li>
                     <li>Engaged in playtest sessions and focus groups, producing insights from both players and developers.</li>
                   </ul>
                 </div>
