--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="col-md-3 text-center d-flex flex-column justify-content-center mx-auto" style=""><i class="fa fa-5x fa-address-card v text-primary mx-auto my-5 p-3 border border-primary rounded shadow" style=""></i></div>
         <div class="col-md-8 my-auto" style="">
           <h2 class="">About Me</h2>
-          <p class="">Hi, I'm Ryan! I've explored many frontiers of technology ranging from Machine Learning to Game Design to Support Engineering. This range prepared me to be attentive and confident in finding footing in any situation. My aim is to create systems, tools and experiences that are gratifying for end users and developers. If you know of any opportunities or want to talk about anything on this page, feel free to reach out!<br></p>
+          <p class="">Hi, I'm Ryan! I've explored many frontiers of technology ranging from Machine Learning to Game Design to Support Engineering. This range prepared me to be attentive and confident in finding footing in any situation. My aim is to create systems, tools and experiences that are gratifying for end users and developers. If you would like to collaborate, don't hesitate to reach out!<br></p>
           <p class="mb-0"><b>Recent Technologies:</b></p>
           <ul class="list-inline">
             <li class="list-inline-item">React</li>
