Update email in index.html

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           <div class="card">
             <div class="card-body">
               <h4>Ryan Lin</h4>
-              <p class="mx-auto">BSci Computer Science and Engineering<br>Minor in Statistics<br><br>rlin1@people.unr.edu<br>New York City, USA</p>
+              <p class="mx-auto">BSci Computer Science and Engineering<br>Minor in Statistics<br><br>rlin7887@gmail.com<br>New York City, USA</p>
             </div>
           </div>
         </div>
